--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello Worldcd digitalpu.github.iocd digitalpu.github.iocd digitalpu.github.io   
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Latest_tech</title>
+        <link href="index.css" rel="stylesheet">
+        <link href='http://fonts.googleapis.com/css?family=Just+Another+Hand' rel='stylesheet' type='text/css'> 
+    </head>
+    <body>
+        <div class="nav">
+            <h3 class="title">Latest_tech</h3>
+        </div>
+    </body>
+</html> 
