--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
-<!DOCTYPE html>
 <html>
     <head>
-        <title>Latest_tech</title>
-        <link href="index.css" rel="stylesheet">
-        <link href='http://fonts.googleapis.com/css?family=Just+Another+Hand' rel='stylesheet' type='text/css'> 
+        <title>TEMPLATE</title>
+        <link rel="stylesheet" href="index.css" type="text/css"/>
+        <script src="template.js"></script>
     </head>
     <body>
-        <div class="nav">
-            <h3 class="title">Latest_tech</h3>
+        <div class="div1" id="div1" >
+            <img src="dev.jpeg" class="img" id="img"/>
+            <div class="div1a" id="div1a">
+                <h3 class="heading"><u>hightech coders</u></h3>
+                <p class="para">H I S T O R Y</p> 
+                <p class="p1">if(sad() === true){<br>
+                                     sad().stop();<br>
+                                     <b>beAwesome();</b><br>
+                                    }
+                </p>
+                <p class="p2">You are the <b>developer</b> of your own <b>life</b>.......<br>
+                              Think and move...
+                </p>
+                <button class="button1" id="button">Begin</button>
+            </div>
+        </div>
+        <div class="div2">
+
+            <p class="d2-heading">
+                <u>A tour in the world of web</u>
+            </p>
+             <img src="slide2.jpg" class="img1">
+             <p class="d2-para"><i>Web development is the work involved in developing a website for the Internet or an intranet. Web development can range from developing a simple single static page of plain text to complex web-based internet applications, electronic businesses, and social network services.A more comprehensive list of tasks to which web development commonly refers, may include web engineering, web design, web content development, client liaison, client-side/server-side scripting, web server and network security configuration, and e-commerce development.
+
+            Among web professionals, "web development" usually refers to the main non-design aspects of building websites: writing markup and coding.[2] Web development may use content management systems (CMS) to make content changes easier and available with basic technical skills.
+
+            For larger organizations and businesses, web development teams can consist of hundreds of people (web developers) and follow standard methods like Agile methodologies while developing websites. Smaller organizations may only require a single permanent or contracting developer, or secondary assignment to related job positions such as a graphic designer or information systems technician. Web development may be a collaborative effort between departments rather than the domain of a designated department. There are three kinds of web developer specialization: front-end developer, back-end developer, and full-stack developer. Front-end developers are responsible for behavior and visuals that run in the user browser, while back-end developers deal with the servers.</i>
+             </p>
         </div>
     </body>
-</html> 
+</html>
