--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<!doctype html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>TEMPLATE</title>
         <link rel="stylesheet" href="index.css" type="text/css"/>
         <script src="template.js"></script>
@@ -8,7 +10,7 @@
         <div class="div1" id="div1" >
             <img src="dev.jpeg" class="img" id="img"/>
             <div class="div1a" id="div1a">
-                <h3 class="heading"><u>hightech coders</u></h3>
+                <h3 class="heading"><u><abbr aria-label="high">hightech coders</abbr></u></h3>
                 <p class="para">H I S T O R Y</p> 
                 <p class="p1">if(sad() === true){<br>
                                      sad().stop();<br>
@@ -27,7 +29,7 @@
                 <u>A tour in the world of web</u>
             </p>
              <img src="slide2.jpg" class="img1">
-             <p class="d2-para"><i>Web development is the work involved in developing a website for the Internet or an intranet. Web development can range from developing a simple single static page of plain text to complex web-based internet applications, electronic businesses, and social network services.A more comprehensive list of tasks to which web development commonly refers, may include web engineering, web design, web content development, client liaison, client-side/server-side scripting, web server and network security configuration, and e-commerce development.
+             <p class="d2-para"><i>Web <abbr aria-label="dev">development</abbr> is the work involved in developing a website for the Internet or an intranet. Web development can range from developing a simple single static page of plain text to complex web-based internet applications, electronic businesses, and social network services.A more comprehensive list of tasks to which web development commonly refers, may include web engineering, web design, web content development, client liaison, client-side/server-side scripting, web server and network security configuration, and e-commerce development.
 
             Among web professionals, "web development" usually refers to the main non-design aspects of building websites: writing markup and coding.[2] Web development may use content management systems (CMS) to make content changes easier and available with basic technical skills.
 
